--- a/css/3-col-portfolio.css
+++ b/css/3-col-portfolio.css
@@ -23,7 +23,7 @@ h1{
 	text-align:center;
 	font-weight:bold;
 	font-size: 40px;
-	margin-bottom:20px;
+	margin-bottom:5px;
 	}
 	
 h2{
@@ -37,24 +37,42 @@ h3 a{
 	}
 h3 a:hover{
 	font-weight: bold;
-	text-align:center;
+	text-align:left;
 	color:black;
 	text-decoration: none;
 	}
 h3{
 	font-weight: bold;
+	text-align:left;
+	color:black;
+	}
+	
+h4 a{
+	font-weight: bold;
 	text-align:center;
 	color:black;
+	}
+h4 a:hover{
+	font-weight: bold;
+	text-align:left;
+	color:black;
+	text-decoration: none;
+	}
+h4{
+	font-weight: bold;
+	text-align:left;
+	color:black;
+	font-size:22px;
 	}
 
 .portfolio-item {
 	padding: 0;
 }
 .img-responsive {
-	max-width: 80%;
-    max-height: 80%;
+	max-width: 90%;
+    max-height: 90%;
 	opacity:1;
-	margin: auto;
+	margin: left;
 	box-shadow: 5px 5px 2px #888888;
 }
 
