--- a/css/fish_style.css
+++ b/css/fish_style.css
@@ -94,11 +94,19 @@
 	border-color:#ff9999;
 }
 
-.navwidget li a:visited,.navbar li a:active, .navbar li a:link {color: black; text-decoration:none;}
-.navbar-inverse .navbar-nav>li>a:hover {color: white; text-decoration:none; background-color:#ff8080;}
+.navwidget li a:visited,.navbar li a:active, .navbar li a:link, .navbar-inverse .navbar-nav>li>a {color: black; text-decoration:none;}
+.navbar-inverse .navbar-nav>li>a:hover {color: white; text-decoration:none; background-color:#ff8080; cursor:pointer;}
 
 .navbar-inverse .navbar-brand {color: black; text-decoration:none; border:0;}
 .navbar-inverse .navbar-brand:hover {color: white; text-decoration:none; background-color:#ff8080;}
+
+#dropdownMenuButton, .btn-secondary {color: black; background-color:#ff9999; 
+     padding-top:3px !important; padding-bottom:2px !important; border:0; height:25px; vertical-align:middle;}
+#dropdownMenuButton:hover{color: white; background-color:#ff8080; border-radius: 0px;}
+.dropdown-menu{min-width:80px;}
+.dropdown-item{color:black; padding-left:5px;}
+.dropdown-item:hover{color:gray;}
+
 
 .glyphicon-one-fine-full-dot:before {
     content:"\25cf";
@@ -147,7 +155,6 @@ h4{
     -o-background-size: cover;
     background-size: cover;
 }
-
 
 
 @media (min-width: 768px) {
@@ -277,10 +284,10 @@ section {
 .arrow-up {
     position:fixed;
    	margin-left: -22px;
-    top:6%;
+    top:37px;
     cursor: pointer;
     z-index:1002;
-    font-size: 30px;
+    font-size: 24px;
     color: #000000;
     font-weight:bold;
 
@@ -289,10 +296,10 @@ section {
 .arrow-down {
     position:fixed;
    	margin-left: -22px;
-    top:92%;
+    top:94%;
     cursor: pointer;
     z-index:1002;
-    font-size: 30px;
+    font-size: 24px;
     color: #000000;
     font-weight:bold;
 
