--- a/css/groundwater_style.css
+++ b/css/groundwater_style.css
@@ -94,11 +94,19 @@
 	border-color:#4d79ff;
 }
 
-.navwidget li a:visited,.navbar li a:active, .navbar li a:link {color: white; text-decoration:none;}
-.navbar-inverse .navbar-nav>li>a:hover {color: black; text-decoration:none; background-color:#809fff;}
+.navwidget li a:visited,.navbar li a:active, .navbar li a:link, .navbar-inverse .navbar-nav>li>a {color: white; text-decoration:none;}
+.navbar-inverse .navbar-nav>li>a:hover {color: black; text-decoration:none; background-color:#809fff; cursor:pointer;}
 
 .navbar-inverse .navbar-brand {color: white; text-decoration:none; border:0;}
 .navbar-inverse .navbar-brand:hover {color: black; text-decoration:none; background-color:#809fff;}
+
+#dropdownMenuButton, .btn-secondary {color: white; background-color:#4d79ff; 
+     padding-top:3px !important; padding-bottom:2px !important; border:0; height:25px; vertical-align:middle;}
+#dropdownMenuButton:hover{color: black; background-color:#809fff; border-radius: 0px;}
+.dropdown-menu{min-width:80px;}
+.dropdown-item{color:black; padding-left:5px;}
+.dropdown-item:hover{color:gray;}
+
 
 h4{
 	font-family: "Inconsolata", sans-serif;
@@ -269,10 +277,10 @@ section {
 .arrow-up {
     position:fixed;
    	margin-left: -22px;
-    top:6%;
+    top:37px;
     cursor: pointer;
     z-index:1002;
-    font-size: 30px;
+    font-size: 24px;
     color: #ffffff;
     font-weight:bold;
 
@@ -281,10 +289,10 @@ section {
 .arrow-down {
     position:fixed;
    	margin-left: -22px;
-    top:92%;
+    top:94%;
     cursor: pointer;
     z-index:1002;
-    font-size: 30px;
+    font-size: 24px;
     color: #ffffff;
     font-weight:bold;
 
