--- a/css/infrastructure_style.css
+++ b/css/infrastructure_style.css
@@ -93,11 +93,18 @@
 	border-color:#ccbd7f;
 }
 
-.navwidget li a:visited,.navbar li a:active, .navbar li a:link {color: white; text-decoration:none;}
-.navbar-inverse .navbar-nav>li>a:hover {color: black; text-decoration:none; background-color:#aaa23c;}
+.navwidget li a:visited,.navbar li a:active, .navbar li a:link, .navbar-inverse .navbar-nav>li>a {color: white; text-decoration:none;}
+.navbar-inverse .navbar-nav>li>a:hover {color: black; text-decoration:none; background-color:#aaa23c; cursor:pointer;}
 
 .navbar-inverse .navbar-brand {color: white; text-decoration:none; border:0;}
 .navbar-inverse .navbar-brand:hover {color: black; text-decoration:none; background-color:#aaa23c;}
+
+#dropdownMenuButton, .btn-secondary {color: white; background-color:#ccbd7f; 
+     padding-top:3px !important; padding-bottom:2px !important; border:0; height:25px; vertical-align:middle;}
+#dropdownMenuButton:hover{color: black; background-color:#aaa23c; border-radius: 0px;}
+.dropdown-menu{min-width:80px;}
+.dropdown-item{color:black; padding-left:5px;}
+.dropdown-item:hover{color:gray;}
 
 .glyphicon-one-fine-full-dot:before {
     content:"\25cf";
@@ -277,10 +284,10 @@ section {
 .arrow-up {
     position:fixed;
    	margin-left: -22px;
-    top:6%;
+    top:37px;
     cursor: pointer;
     z-index:1002;
-    font-size: 30px;
+    font-size: 24px;
     color: #ffffff;
     font-weight:bold;
 
@@ -289,10 +296,10 @@ section {
 .arrow-down {
     position:fixed;
    	margin-left: -22px;
-    top:92%;
+    top:94%;
     cursor: pointer;
     z-index:1002;
-    font-size: 30px;
+    font-size: 24px;
     color: #ffffff;
     font-weight:bold;
 
