--- a/css/precip_style.css
+++ b/css/precip_style.css
@@ -147,12 +147,19 @@
 	border-color:#000000;
 }
 
-.navwidget li a:visited,.navbar li a:active, .navbar li a:link {color: white; text-decoration:none;    padding-left:5px;
+.navwidget li a:visited,.navbar li a:active, .navbar li a:link, .navbar-inverse .navbar-nav>li>a {color: white; text-decoration:none;    padding-left:5px;
     padding-right:5px;}
-.navbar-inverse .navbar-nav>li>a:hover {color: white; text-decoration:none; background-color:#999999;}
+.navbar-inverse .navbar-nav>li>a:hover {color: white; text-decoration:none; background-color:#999999; cursor:pointer;}
 
 .navbar-inverse .navbar-brand {color: white; text-decoration:none; border:0;}
 .navbar-inverse .navbar-brand:hover {color: white; text-decoration:none; background-color:#999999;}
+
+#dropdownMenuButton, .btn-secondary {color: white; background-color:#000000; 
+     padding-top:3px !important; padding-bottom:2px !important; border:0; height:25px; vertical-align:middle;}
+#dropdownMenuButton:hover{color: black; background-color:#999999; border-radius: 0px;}
+.dropdown-menu{min-width:80px;}
+.dropdown-item{color:black; padding-left:5px;}
+.dropdown-item:hover{color:gray;}
 
 
 h4{
@@ -324,10 +331,10 @@ section {
 .arrow-up {
     position:fixed;
    	margin-left: -22px;
-    top:6%;
+    top:37px;
     cursor: pointer;
     z-index:1002;
-    font-size: 30px;
+    font-size: 24px;
     color: #ffffff;
     font-weight:bold;
 
@@ -336,10 +343,10 @@ section {
 .arrow-down {
     position:fixed;
    	margin-left: -22px;
-    top:92%;
+    top:94%;
     cursor: pointer;
     z-index:1002;
-    font-size: 30px;
+    font-size: 24px;
     color: #ffffff;
     font-weight:bold;
 
