--- a/css/water_use_style.css
+++ b/css/water_use_style.css
@@ -94,12 +94,19 @@
 	border-color:#adad85;
 }
 
-.navwidget li a:visited,.navbar li a:active, .navbar li a:link {color: white; text-decoration:none;    padding-left:5px;
+.navwidget li a:visited,.navbar li a:active, .navbar li a:link, .navbar-inverse .navbar-nav>li>a {color: white; text-decoration:none;padding-left:5px;
     padding-right:5px; font-size:12px;}
-.navbar-inverse .navbar-nav>li>a:hover {color: black; text-decoration:none; background-color:#a3a375;}
+.navbar-inverse .navbar-nav>li>a:hover {color: black; text-decoration:none; background-color:#a3a375; cursor:pointer;}
 
 .navbar-inverse .navbar-brand {color: white; text-decoration:none; border:0;}
 .navbar-inverse .navbar-brand:hover {color: black; text-decoration:none; background-color:#a3a375;}
+
+#dropdownMenuButton, .btn-secondary {color: white; background-color:#adad85; font-size:12px; padding-left:5px;
+    padding-right:5px; padding-top:3px !important; padding-bottom:1px !important; border:0; height:25px; vertical-align:middle;}
+#dropdownMenuButton:hover{color: black; background-color:#a3a375; border-radius: 0px;}
+.dropdown-menu{min-width:80px;}
+.dropdown-item{color:black;}
+.dropdown-item:hover{color:gray;}
 
 h4{
 	font-family: "Inconsolata", sans-serif;
@@ -271,10 +278,10 @@ section {
 .arrow-up {
     position:fixed;
    	margin-left: -22px;
-    top:6%;
+    top:37px;
     cursor: pointer;
     z-index:1002;
-    font-size: 30px;
+    font-size: 24px;
     color: #ffffff;
     font-weight:bold;
 
@@ -283,10 +290,10 @@ section {
 .arrow-down {
     position:fixed;
    	margin-left: -22px;
-    top:92%;
+    top:94%;
     cursor: pointer;
     z-index:1002;
-    font-size: 30px;
+    font-size: 24px;
     color: #ffffff;
     font-weight:bold;
 
