--- a/css/flood_style.css
+++ b/css/flood_style.css
@@ -172,7 +172,7 @@ h4{
 
     .main {
         padding-right: 40px;
-        padding-left: 20px;
+        padding-left: 35px;
         z-index: 1001;
         width: 500px;
         background:#CDD2D5;
@@ -317,6 +317,8 @@ section {
     font-size: 25px;
     color: #000000;
     font-weight:bold;
+    padding:5px;
+    border-radius: 5px;
 
 }
 
