--- a/css/water_use_style.css
+++ b/css/water_use_style.css
@@ -141,7 +141,7 @@ h4{
     background: url(overview_use.jpg) no-repeat center center fixed;
 }
 .end-background-img {
-    background: url(end_use.JPG) no-repeat center center fixed;
+    background: url(end_use.jpg) no-repeat center center fixed;
 }
 
 .background-fullscreen-setting {
@@ -296,6 +296,8 @@ section {
     font-size: 24px;
     color: #ffffff;
     font-weight:bold;
+    padding:5px;
+    border-radius: 5px;
 
 }
 
@@ -414,4 +416,5 @@ div.leg p {
   /* place center */
   margin-left:auto;
   margin-right:auto; 
+  color:black;
 }
