--- a/css/groundwater_style.css
+++ b/css/groundwater_style.css
@@ -295,7 +295,6 @@ section {
     font-size: 24px;
     color: #ffffff;
     font-weight:bold;
-    padding:5px;
     border-radius: 5px;
 
 }
@@ -420,6 +419,7 @@ div.leg p {
   /* place center */
   margin-left:auto;
   margin-right:auto; 
+  color:black;
 }
 
 
