--- a/css/infrastructure_style.css
+++ b/css/infrastructure_style.css
@@ -302,7 +302,6 @@ section {
     font-size: 24px;
     color: #ffffff;
     font-weight:bold;
-    padding:5px;
     border-radius: 5px;
 
 }
@@ -442,6 +441,7 @@ font-family: 'La Belle Aurore', cursive;
   /* place center */
   margin-left:auto;
   margin-right:auto; 
+  color:black;
 }
 
 
