--- a/css/precip_style.css
+++ b/css/precip_style.css
@@ -349,7 +349,6 @@ section {
     font-size: 24px;
     color: #ffffff;
     font-weight:bold;
-    padding:5px;
     border-radius: 5px;
 
 }
@@ -469,6 +468,7 @@ div.leg p {
   /* place center */
   margin-left:auto;
   margin-right:auto; 
+  color:black;
 }
 
 
