--- a/css/surface_style.css
+++ b/css/surface_style.css
@@ -303,7 +303,6 @@ section {
     font-size: 24px;
     color: #000000;
     font-weight:bold;
-    padding:5px;
     border-radius: 5px;
 
 }
@@ -456,6 +455,9 @@ font-family: 'La Belle Aurore', cursive;
   /* place center */
   margin-left:auto;
   margin-right:auto; 
+}
+.glyphicon-home{
+	color:white;
 }
 
 
