--- a/css/groundwater_style.css
+++ b/css/groundwater_style.css
@@ -373,6 +373,7 @@ div.leg p {
     font-size: 16px;
     color: white;
     line-height: 25px;
+    height:25px;
     margin: 0;
     text-shadow: black 0.1em 0.1em 0.2em;
 }
