--- a/css/umatilla_style.css
+++ b/css/umatilla_style.css
@@ -45,7 +45,7 @@
     font-size: 40px;
 }
 
-.navbar {
+.navwidget {
     position: fixed;
     top: 5%;
     left: 92%;
@@ -61,18 +61,18 @@
     filter:alpha(opacity=0);
     -moz-opacity:0;
 }
-.navbar:hover{
+.navwidget:hover{
 	opacity:1;
 	}
 
-.navbar > li {
+.navwidget > li {
     position: relative;
     display: block !important;
     cursor: pointer;
     text-align: left;
 }
 
-.navbar li a {
+.navwidget li a {
     outline: 1px;
     border: 0;
     padding: 4px;
@@ -81,8 +81,30 @@
     font-weight:bold;
 }
 
-.navbar li a:visited,.navbar li a:active, .navbar li a:link  {color: rgba(0, 0, 0, 1); text-decoration:none}
-.navbar li a:hover   {color: rgba(0, 0, 0, .5); background-color:black); text-decoration:none;}
+.navbar-nav > li > a, .navbar-brand {
+    padding-top:3px !important;
+    padding-bottom:0 !important;
+    height: 25px;    
+}
+
+.navbar {
+	min-height:25px !important;
+	background-color:#f4f0bd;
+	border-color:#f4f0bd;
+}
+
+.navwidget li a:visited,.navbar li a:active, .navbar li a:link {color: black; text-decoration:none;}
+.navbar-inverse .navbar-nav>li>a:hover {color: white; text-decoration:none; background-color:#f0eba8; cursor:pointer;}
+
+.navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a {color: black; text-decoration:none; border:0;}
+.navbar-inverse .navbar-brand:hover {color: white; text-decoration:none; background-color:#f0eba8;}
+
+#dropdownMenuButton, .btn-secondary {color: black; background-color:#f4f0bd; 
+     padding-top:3px !important; padding-bottom:2px !important; border:0; height:25px; vertical-align:middle;}
+#dropdownMenuButton:hover{color: white; background-color:#f0eba8; border-radius: 0px;}
+.dropdown-menu{min-width:80px;}
+.dropdown-item{color:black; padding-left:5px;}
+.dropdown-item:hover{color:gray;}
 
 
 .glyphicon-one-fine-full-dot:before {
@@ -156,7 +178,7 @@ h4{
 
     .main {
         padding-right: 40px;
-        padding-left: 20px;
+        padding-left: 35px;
         z-index: 1001;
         width: 450px;
     }
@@ -260,19 +282,32 @@ section {
     opacity:0;
 }
 
-.arrow-down {
+.arrow-up {
     position:fixed;
-    padding-left: 15px;
-    top:90%;
+   	margin-left: -22px;
+    top:37px;
     cursor: pointer;
     z-index:1002;
-    font-size: 30px;
+    font-size: 24px;
     color: #000000;
     font-weight:bold;
 
 }
 
-.arrow-down:hover {
+.arrow-down {
+    position:fixed;
+   	margin-left: -22px;
+    top:94%;
+    cursor: pointer;
+    z-index:1002;
+    font-size: 24px;
+    color: #000000;
+    font-weight:bold;
+    border-radius: 5px;
+
+}
+
+.arrow-down:hover, .arrow-up:hover {
     color: gray;
 
 }
@@ -424,6 +459,13 @@ font-family: 'La Belle Aurore', cursive;
       -moz-border-radius: 25px;
       border-radius: 25px;
 		border:0.2px solid #ffffff;    
+}
+#share-modal{
+	width: 390px; /* desired relative width */
+  left: 5%; /* (100%-width)/2 */
+  /* place center */
+  margin-left:auto;
+  margin-right:auto; 
 }
 
 
