--- a/css/water_use_style.css
+++ b/css/water_use_style.css
@@ -369,8 +369,10 @@ div.leg p {
     font-size: 16px;
     color: white;
     line-height: 25px;
+    height:25px;
     margin: 0;
     text-shadow: black 0.1em 0.1em 0.2em;
+    display:block;
 }
 
 
