--- a/css/infrastructure_style.css
+++ b/css/infrastructure_style.css
@@ -1,3 +1,16 @@
+html {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    font-weight: 400;
+    }
+
+    @-moz-document url-prefix() {
+        body {
+            font-weight: 400 !important;
+        }
+    }
+
 .sidebar {
    /* display: none;*/
 }
