--- a/css/infrastructure_style.css
+++ b/css/infrastructure_style.css
@@ -218,7 +218,7 @@ h4{
         padding-right: 10px;
         padding-left: 25px;
         z-index: 1001;
-        width: 100%
+        width: 100%;
         background-color:rgba(0, 0, 0, 0);
     }
 
