--- a/css/3-col-portfolio.css
+++ b/css/3-col-portfolio.css
@@ -20,7 +20,8 @@
 
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Mukta';
+
 }
 
 .about{
@@ -32,6 +33,10 @@ body {
 	color:black;
 	cursor: pointer;
 	}
+
+p{
+	font-weight:normal;
+}
 
 h1{
 	text-align:center;
@@ -73,10 +78,11 @@ h4 a:hover{
 	text-decoration: none;
 	}
 h4{
-	font-weight: bold;
+	font-weight: normal;
 	text-align:left;
 	color:black;
-	font-size:22px;
+	/*text-transform:uppercase;*/
+	font-size:24px;
 	}
 
 .portfolio-item {
@@ -86,7 +92,6 @@ h4{
 	max-width: 90%;
     max-height: 90%;
 	opacity:1;
-	margin: left;
 	box-shadow: 5px 5px 2px #888888;
 }
 
