--- a/css/fish_style.css
+++ b/css/fish_style.css
@@ -114,7 +114,7 @@
 }
 
 h4{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Mukta';
 	font-weight:bold;
 	font-size: 100px;
 	margin-top: 8%;
@@ -353,27 +353,27 @@ div.leg p {
 body {
 	background-color:#545966;
 	color: #000000;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Mukta';
 }
 h1{
 	padding-left: 0px;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Mukta';
 }
 p{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Mukta';
 	font-size: 20px;
 	display: inline;
 	color:black;
 }
 p2{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Mukta';
 	color:black;
 }
 h2{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Mukta';
 }
 h3{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Mukta';
 	font-size: 50px;
 	font-weight:bold;
 	color:black;
@@ -393,7 +393,7 @@ font-family: 'La Belle Aurore', cursive;
     cursor: pointer;
     color:black;
     padding:10px;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Mukta';
 }
 .social:hover {
     color: gray;
@@ -409,7 +409,7 @@ font-family: 'La Belle Aurore', cursive;
 }	
 .label_tooltip {
   background-color: rgba(255,255,255,1);
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Mukta';
   font-weight: bold; 
   border: 2px solid rgba(255,255,255,1);
   box-shadow: 2px 2px rgba(0,0,0,0.5);
@@ -424,7 +424,7 @@ font-family: 'La Belle Aurore', cursive;
 }
 .label_tooltip2 {
   background-color: rgba(255,255,255,1);
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Mukta';
   font-weight: bold; 
   border: 2px solid rgba(255,255,255,1);
   box-shadow: 2px 2px rgba(0,0,0,0.5);
