--- a/css/hub-style.css
+++ b/css/hub-style.css
@@ -57,7 +57,7 @@ body {
 		height:40px !important;
 	}
 }
-@media (min-width: 587px) {
+@media (min-width: 768px) {
 	#scrollbar{
 		height:auto;
 	}
@@ -66,8 +66,11 @@ body {
 		top:calc(100% - 95px);
 		left:calc(50% - 10px);
 	}
+	div#background{
+		opacity:0.4;
+	}
 }
-@media (max-width: 586px) and (min-width: 500px) {
+@media (max-width: 768px) and (min-width: 500px) {
 	#scrollbar{
 		height:auto;
 	}
@@ -75,6 +78,9 @@ body {
 		position:fixed;
 		top:calc(100% - 140px);
 		left:calc(50% - 10px);
+	}
+	div#background{
+		opacity:0;
 	}
 }
 @media (max-width:499px) and (min-width: 334px) {
@@ -87,6 +93,9 @@ body {
 		top:calc(100% - 140px);
 		left:calc(50% - 10px);
 	}
+	div#background{
+		opacity:0;
+	}
 }
 @media (max-width:333px) {
 	#scrollbar{
@@ -96,6 +105,9 @@ body {
 		position:fixed;
 		top:calc(100% - 180px);
 		left:calc(50% - 10px);
+	}
+	div#background{
+		opacity:0;
 	}
 }
 
@@ -155,7 +167,6 @@ div#background{
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position:50% 50%;
-	opacity:0.4;
 }
 
 .container{
