--- a/css/hub-style.css
+++ b/css/hub-style.css
@@ -111,6 +111,26 @@ body {
 	}
 }
 
+ul {
+	text-align: justify;
+	padding-left:0;
+}
+ul:after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+}
+ul:before {
+    content: '';
+    display: block;
+    margin-top: -1.25em;
+}
+li {
+    display: inline-block;
+    margin-right: -.25em;
+    position: relative;
+    top: 1.25em;
+}
 
 
 .navbar{
@@ -133,6 +153,7 @@ body {
 	color:white;
 	font-weight:900;
 	font-size:30px;
+	float:right;
 }
 .navbar-text{
 	color:white;
@@ -167,6 +188,9 @@ div#background{
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position:50% 50%;
+	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+	  filter: grayscale(100%);
+	  opacity:0.4;
 }
 
 .container{
@@ -327,14 +351,6 @@ footer {
   padding-right: 0;
   padding-left: 0;
 }
-ul, li {
-	list-style: none;
-	 display: inline;
-}
-ul {
-	white-space: nowrap;
-	text-align: center;
-	}
 #dropdownMenuButton, .btn-secondary {color: black; background-color:rgba(0,0,0,0); 
       border:0; vertical-align:middle;}
 .dropdown-menu{min-width:80px;}
