--- a/css/3-col-portfolio.css
+++ b/css/3-col-portfolio.css
@@ -20,7 +20,7 @@
 
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-	font-family: 'Mukta';
+	font-family: 'Lora', serif;
 
 }
 
