--- a/css/hub-style.css
+++ b/css/hub-style.css
@@ -23,7 +23,7 @@
 
 body {
    /* padding-top: 70px;  Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-   font-family: 'Mukta';
+   font-family: 'Lora', serif;
    height:100%;
     width:100%;
 }
