--- a/css/year-of-water.css
+++ b/css/year-of-water.css
@@ -66,7 +66,7 @@ div#background{
 	}
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
 	#panel{
 		border-right:0px solid black; 
 		height:100%;
@@ -93,10 +93,14 @@ div#background{
 		visibility:visible;
 	}
 	#logo-row{
-		display:none;
+		display:block;
+	}
+	#arrow{
+		margin-left:50px;
+		left:calc(25% - 10px);
 	}
 }
-@media (max-width: 768px) {
+@media (max-width: 992px) {
 	#panel{
 		border-right:0px solid black; 
 		height:100%;
@@ -127,6 +131,16 @@ div#background{
 	}
 	#logo-row{
 		display:block;
+	}
+	#arrow{
+		margin-left:0px;
+		left:calc(50% - 10px);
+	}
+}
+@media (max-width:768px)
+{
+	#backButton{
+		visibility:hidden;
 	}
 }
 
@@ -529,3 +543,62 @@ footer {
 		box-shadow:         0px 0px 10px 0px rgba(191, 191, 191, 0.67);
 		cursor:pointer;
 	}
+	.statewide_label{
+		font-size:30px;
+		font-family: 'Lora', serif;
+		background-color:rgba(0,0,0,0);
+		border:none;
+		box-shadow:none;
+		width:auto;
+		display:none;
+		color:white;
+		font-weight:bold;
+	}
+	.leaflet-tooltip-left.statewide_label::before, .leaflet-tooltip-right.statewide_label::before, .leaflet-tooltip-top.statewide_label::before, .leaflet-tooltip-bottom.statewide_label::before {
+		display:none;
+   }
+
+   .centerMap {
+	font-family: 'Lora', serif;
+	font-weight:bold;
+	text-align:center;
+	position: absolute;
+	display: block;
+	font-size:18px;
+	bottom: 30px;
+	width: 150px;
+	height: 40px;
+	right: 10px;
+	z-index: 1000;
+	overflow: hidden;
+	border: 2px solid rgba(0, 0, 0, 0.2); 
+	border-radius:5px;
+	background-color:#ffffff;
+	
+	-moz-background-clip: padding;     /* Firefox 3.6 */
+	-webkit-background-clip: padding;  /* Safari 4? Chrome 6? */
+	background-clip: padding-box;
+	
+  }
+  .centerMap:hover{
+	  background-color:#f2f2f2;
+	  cursor:pointer;
+  }
+
+  #arrow{
+	background:rgba(255,255,255,1);
+	padding:5px;
+	position:fixed;
+	top:calc(100% - 50px);
+}
+#backButton{
+	position:absolute; 
+	top:5px; 
+	left:5px;
+	color:black;
+	font-size:16px;
+	font-weight:bold;
+}
+#backButton:hover{
+	cursor:pointer;
+}
