--- a/css/year-of-water.css
+++ b/css/year-of-water.css
@@ -185,7 +185,6 @@ li {
 	display:block;
 	position:fixed;
 	width:100%;
-	top:0;
 }
 
 .navbar-brand{
@@ -287,9 +286,10 @@ div.foot-row{
 }
 
 .about{
-	font-size:20px;
 	color:black;
-	text-align:center;
+	text-align:left;
+	display:inline;
+	margin-left:10px;
 	}
 .about:hover{
 	color:black;
@@ -429,7 +429,7 @@ div.title-container h2{
 	display: block;
 	width: 100px;
 	left: 10px;
-	bottom: 10px;
+	bottom: 20px;
 	text-indent: -9999px;
 	z-index: 700;
 	overflow: hidden;
@@ -650,4 +650,24 @@ footer {
 div.markerColor{
 	border-radius: 50%;
 	background:black;
+}
+
+#topbar{
+	height:35px;
+	position:fixed;
+	background:#dfe7ec;
+	width:100%;
+	z-index:2000;
+}
+
+#top-contents{
+	margin-top:30px;
+	text-align:center;
+}
+.top-contents-item{
+	margin-left:10px;
+	font-size:20px;
+}
+.top-contents-item:hover{
+	cursor:pointer;
 }
