--- a/css/drinking_style.css
+++ b/css/drinking_style.css
@@ -113,7 +113,7 @@
 }
 
 h4{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	font-weight:bold;
 	font-size: 100px;
 	margin-top: 10%;
@@ -215,7 +215,7 @@ h4{
     line-height: 16px;
     width: 150px;
     color: #333333;
-	font-family: "Verdana", Geneva, sans-serif;
+	font-family: 'Lora', serif;
     padding: 6px 8px;
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -226,7 +226,7 @@ h4{
     line-height: 16px;
     width: 200px;
     color: #333333;
-	font-family: "Verdana", Geneva, sans-serif;
+	font-family: 'Lora', serif;
     padding: 6px 8px;
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -349,30 +349,28 @@ div.leg p {
 body {
 	background-color:#545966;
 	color: #ffffff;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 h1{
 	padding-left: 0px;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 p{
-	font-family: "Inconsolata", sans-serif;
-	text-shadow: black 0.2em 0.2em 0.3em;
+	font-family: 'Lora', serif;
 	font-size:20px;
 }
 p2{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	color:black;
 }
 h2{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 h3{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	font-size: 50px;
 	font-weight:bold;
 	margin-top: 5px;
-text-shadow: black 0.1em 0.1em 0.2em;
 	}
 
 .social,.social2,.social3 {
@@ -380,7 +378,7 @@ text-shadow: black 0.1em 0.1em 0.2em;
     cursor: pointer;
     color:black;
     padding:10px;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 
 .social:hover {
@@ -397,7 +395,7 @@ text-shadow: black 0.1em 0.1em 0.2em;
 }
 .label_tooltip {
   background-color: rgba(255,255,255,1);
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
   font-weight: bold; 
   border: 2px solid rgba(255,255,255,1);
   box-shadow: 2px 2px rgba(0,0,0,0.5);
