--- a/css/fish_style.css
+++ b/css/fish_style.css
@@ -114,7 +114,7 @@
 }
 
 h4{
-	font-family: 'Mukta';
+	font-family: 'Lora', serif;
 	font-weight:bold;
 	font-size: 100px;
 	margin-top: 8%;
@@ -220,7 +220,7 @@ h4{
     line-height: 16px;
     width: 150px;
     color: #333333;
-	font-family: "Verdana", Geneva, sans-serif;
+	font-family: 'Lora', serif;
     padding: 6px 8px;
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -231,7 +231,7 @@ h4{
     line-height: 16px;
     width: 200px;
     color: #333333;
-	font-family: "Verdana", Geneva, sans-serif;
+	font-family: 'Lora', serif;
     padding: 6px 8px;
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -314,7 +314,7 @@ section {
 div.leg {
     line-height: 16px;
     color: #333333;
-	font-family: "Verdana", Geneva, sans-serif;
+	font-family: 'Lora', serif;
     /*background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     border-radius: 5px;*/
@@ -353,27 +353,27 @@ div.leg p {
 body {
 	background-color:#545966;
 	color: #000000;
-	font-family: 'Mukta';
+	font-family: 'Lora', serif;
 }
 h1{
 	padding-left: 0px;
-	font-family: 'Mukta';
+	font-family: 'Lora', serif;
 }
 p{
-	font-family: 'Mukta';
+	font-family: 'Lora', serif;
 	font-size: 20px;
 	display: inline;
 	color:black;
 }
 p2{
-	font-family: 'Mukta';
+	font-family: 'Lora', serif;
 	color:black;
 }
 h2{
-	font-family: 'Mukta';
+	font-family: 'Lora', serif;
 }
 h3{
-	font-family: 'Mukta';
+	font-family: 'Lora', serif;
 	font-size: 50px;
 	font-weight:bold;
 	color:black;
@@ -393,7 +393,7 @@ font-family: 'La Belle Aurore', cursive;
     cursor: pointer;
     color:black;
     padding:10px;
-	font-family: 'Mukta';
+	font-family: 'Lora', serif;
 }
 .social:hover {
     color: gray;
@@ -409,7 +409,7 @@ font-family: 'La Belle Aurore', cursive;
 }	
 .label_tooltip {
   background-color: rgba(255,255,255,1);
-	font-family: 'Mukta';
+	font-family: 'Lora', serif;
   font-weight: bold; 
   border: 2px solid rgba(255,255,255,1);
   box-shadow: 2px 2px rgba(0,0,0,0.5);
@@ -424,7 +424,7 @@ font-family: 'La Belle Aurore', cursive;
 }
 .label_tooltip2 {
   background-color: rgba(255,255,255,1);
-	font-family: 'Mukta';
+	font-family: 'Lora', serif;
   font-weight: bold; 
   border: 2px solid rgba(255,255,255,1);
   box-shadow: 2px 2px rgba(0,0,0,0.5);
