--- a/css/infrastructure_style.css
+++ b/css/infrastructure_style.css
@@ -106,13 +106,13 @@ html {
 	border-color:#ccbd7f;
 }
 
-.navwidget li a:visited,.navbar li a:active, .navbar li a:link, .navbar-inverse .navbar-nav>li>a {color: white; text-decoration:none;}
+.navwidget li a:visited,.navbar li a:active, .navbar li a:link, .navbar-inverse .navbar-nav>li>a {color: black; text-decoration:none;}
 .navbar-inverse .navbar-nav>li>a:hover {color: black; text-decoration:none; background-color:#aaa23c; cursor:pointer;}
 
-.navbar-inverse .navbar-brand {color: white; text-decoration:none; border:0;}
+.navbar-inverse .navbar-brand {color: black; text-decoration:none; border:0;}
 .navbar-inverse .navbar-brand:hover {color: black; text-decoration:none; background-color:#aaa23c;}
 
-#dropdownMenuButton, .btn-secondary {color: white; background-color:#ccbd7f; 
+#dropdownMenuButton, .btn-secondary {color: black; background-color:#ccbd7f; 
      padding-top:3px !important; padding-bottom:2px !important; border:0; height:25px; vertical-align:middle;}
 #dropdownMenuButton:hover{color: black; background-color:#aaa23c; border-radius: 0px;}
 .dropdown-menu{min-width:80px;}
@@ -125,7 +125,7 @@ html {
 }
 
 h4{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	font-weight:bold;
 	font-size: 100px;
 	margin-top: 10%;
@@ -233,7 +233,7 @@ h4{
     line-height: 16px;
     width: 150px;
     color: #333333;
-	font-family: "Verdana", Geneva, sans-serif;
+	font-family: 'Lora', serif;
     padding: 6px 8px;
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -244,7 +244,7 @@ h4{
     line-height: 16px;
     width: 200px;
     color: #333333;
-	font-family: "Verdana", Geneva, sans-serif;
+	font-family: 'Lora', serif;
     padding: 6px 8px;
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -273,7 +273,7 @@ h4{
     color: black;
     line-height: 16px;
     margin: 0;
-    text-shadow: black 0.0em 0.0em 0.0em;
+
 }
 
 
@@ -301,7 +301,7 @@ section {
     cursor: pointer;
     z-index:1002;
     font-size: 24px;
-    color: #ffffff;
+    color: black;
     font-weight:bold;
 
 }
@@ -313,7 +313,7 @@ section {
     cursor: pointer;
     z-index:1002;
     font-size: 24px;
-    color: #ffffff;
+    color: black;
     font-weight:bold;
     border-radius: 5px;
 
@@ -327,7 +327,7 @@ section {
 div.leg {
     line-height: 16px;
     color: #333333;
-	font-family: "Verdana", Geneva, sans-serif;
+	font-family: 'Lora', serif;
     /*background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     border-radius: 5px;*/
@@ -358,11 +358,11 @@ div.leg img {
 
 div.leg p {
     font-size: 16px;
-    color: white;
+    color: black;
     line-height: 25px;
     height:25px !important;
     margin: 0;
-    text-shadow: black 0.1em 0.1em 0.2em;
+
 }
 
 .leaflet-container {
@@ -371,32 +371,30 @@ div.leg p {
 body {
 	background-color:#545966;
 	color: #000000;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 h1{
 	padding-left: 0px;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 p{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	font-size: 20px;
 	display: inline;
-	text-shadow: black 0.1em 0.1em 0.2em;
-	color:white;
+	color:black;
 }
 p2{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	color:black;
 }
 h2{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 h3{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	font-size: 50px;
 	font-weight:bold;
-	text-shadow: black 0.1em 0.1em 0.2em;
-	color:white;
+	color:black;
 	}
 h5{
 font-family: 'La Belle Aurore', cursive;
@@ -413,7 +411,7 @@ font-family: 'La Belle Aurore', cursive;
     cursor: pointer;
     color:black;
     padding:10px;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 
 .social:hover {
@@ -430,7 +428,7 @@ font-family: 'La Belle Aurore', cursive;
 }	
 .label_tooltip {
   background-color: rgba(255,255,255,1);
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
   font-weight: bold; 
   border: 2px solid rgba(255,255,255,1);
   box-shadow: 2px 2px rgba(0,0,0,0.5);
