--- a/css/surface_style.css
+++ b/css/surface_style.css
@@ -112,7 +112,7 @@
 }
 
 h4{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	font-weight:bold;
 	font-size: 100px;
 	margin-top: 10%;
@@ -221,7 +221,7 @@ h4{
     line-height: 16px;
     width: 150px;
     color: #333333;
-	font-family: "Verdana", Geneva, sans-serif;
+	font-family: 'Lora', serif;
     padding: 6px 8px;
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -232,7 +232,7 @@ h4{
     line-height: 16px;
     width: 200px;
     color: #333333;
-	font-family: "Verdana", Geneva, sans-serif;
+	font-family: 'Lora', serif;
     padding: 6px 8px;
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -357,27 +357,27 @@ div.leg p {
 body {
 	background-color:#545966;
 	color: #000000;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 h1{
 	padding-left: 0px;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 p{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	font-size: 20px;
 	display: inline;
 	color:black;
 }
 p2{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	color:black;
 }
 h2{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 h3{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	font-size: 50px;
 	font-weight:bold;
 	color:black;
@@ -397,7 +397,7 @@ font-family: 'La Belle Aurore', cursive;
     cursor: pointer;
     color:black;
     padding:10px;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 
 .social:hover {
@@ -414,11 +414,11 @@ font-family: 'La Belle Aurore', cursive;
 }	
 .label_tooltip {
   background-color: rgba(255,255,255,1);
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
   font-weight: bold; 
   border: 2px solid rgba(255,255,255,1);
   box-shadow: 2px 2px rgba(0,0,0,0.5);
-  font-family: "Inconsolata", sans-serif;
+  font-family: 'Lora', serif;
 }
 .leaflet-tooltip-left.label_tooltip::before {
   border-left-color: white;
@@ -430,7 +430,7 @@ font-family: 'La Belle Aurore', cursive;
 }
 .label_tooltip2 {
   background-color: rgba(255,255,255,1);
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
   font-weight: bold; 
   border: 2px solid rgba(255,255,255,1);
   box-shadow: 2px 2px rgba(0,0,0,0.5);
