--- a/css/umatilla_style.css
+++ b/css/umatilla_style.css
@@ -2,6 +2,7 @@
    /* display: none;*/
 }
 
+
 .main {
     padding: 20px;
     padding-top: 12px;
@@ -109,7 +110,7 @@
 
 
 h4{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	font-weight:bold;
 	font-size: 100px;
 	margin-top: 10%;
@@ -218,7 +219,7 @@ h4{
     line-height: 16px;
     width: 150px;
     color: #333333;
-	font-family: "Verdana", Geneva, sans-serif;
+	font-family: 'Lora', serif;
     padding: 6px 8px;
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -229,7 +230,7 @@ h4{
     line-height: 16px;
     width: 200px;
     color: #333333;
-	font-family: "Verdana", Geneva, sans-serif;
+	font-family: 'Lora', serif;
     padding: 6px 8px;
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -352,26 +353,26 @@ div.leg p {
 body {
 	background-color:#545966;
 	color: #000000;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 h1{
 	padding-left: 0px;
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 p{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	font-size: 20px;
 	color:black;
 }
 p2{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	color:black;
 }
 h2{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 }
 h3{
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
 	font-size: 50px;
 	font-weight:bold;
 	color:black;
@@ -409,7 +410,7 @@ font-family: 'La Belle Aurore', cursive;
 }	
 .label_tooltip {
   background-color: rgba(255,255,255,1);
-	font-family: "Inconsolata", sans-serif;
+	font-family: 'Lora', serif;
   font-weight: bold; 
   border: 2px solid rgba(255,255,255,1);
   box-shadow: 2px 2px rgba(0,0,0,0.5);
@@ -424,7 +425,7 @@ font-family: 'La Belle Aurore', cursive;
 }
 .label_tooltip2 {
   background-color: rgba(255,255,255,0);
-  font-family: "Inconsolata", sans-serif;
+  font-family: 'Lora', serif;
   font-weight: bold; 
   font-size:14px;
   border: 2px solid rgba(255,255,255,0);
@@ -443,7 +444,7 @@ font-family: 'La Belle Aurore', cursive;
 }
 .label_tooltip3 {
   background-color: rgba(255,255,255,0);
-  font-family: "Inconsolata", sans-serif;
+  font-family: 'Lora', serif;
   font-weight: bold; 
   color: #666666;
   font-size:12px;
